8243936: NonWriteable system properties are actually writeable

Reviewed-by: iklam, dcubed